--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
-    <title>Ionic App</title>
+    <title>CDGF</title>
 
     <base href="/" />
 
     <meta
       name="viewport"
-      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+      content="viewport-fit=cover,
+       width=device-width, 
+       initial-scale=1.0, 
+       minimum-scale=1.0,
+      maximum-scale=1.0, 
+      user-scalable=no"
     />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
@@ -19,8 +24,9 @@
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Ionic App" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="CDGF" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <link rel='apple-touch-icon' href="%PUBLIC_URL%/assets/icon/favicon.png" />
   </head>
 
   <body>
